  messages is the same.  Since a forwarded message shouldn't have the
  'In-Reply-To' header set, this allows forwarded messages to be properly added
  to Karl, while still doing the proper thing when users make comments by
  replying to alert emails.  Based on discussion with OSI.

- Updated the 'add comment' form to respect the IShowSendalert adapter.
  (LP #602889)

3.41 (2010-08-04)
-----------

- Fixed missing asterisk typo in ProfileEditFormController.handle_submit.
  (LP #612503)

3.40 (2010-08-03)

----------

- Fixed a bug in mailin where we were trying to decode headers twice, once in
  repoze.postoffice, and then once again in our processor.

- IE8 button display fixes (LP #610549)

- Merged status views for error monitor and postoffice quarantine, for easier
  monitoring by SFUP.

- Fixed bug in default layout provider: wrong template being called for
  intranet layout. (LP #612576)

3.39 (2010-07-29)

-----------------
- reduced width on login username input for IE6, so it doesn't
  fall to the next line.  Set margin on surrounding field as
  !important, because elements were jumping after focus was moved
  away (LP #611017)

- removed unnecessary margin from profile image, so the middle content
  doesn't get pushed down (LP #610666)

- fixed add tag button on edit screen for IE8 (LP #610549)

- edited the admin right side portlets to match new portlet styles (LP #610493)

- Added support for logging each query, to compare performance across
  different configurations. Keyed on the `query_log_all` parameter, defaulting
  to False. Entries will be added to `log/query/everything.log`.

- Fixed bug in mailin2 script that caused ZEO connections to be left open if
  there was a configuration error.

- Fixed bug in entity conversion where numeric entities were not converted.

- Removed a redundant copy of the text_scrubber code used by mailin.

- Add some preprocessing to the mailin text scrubber to find URLs and mark